# PyPC-Manager

./: README.md  pyproject.toml
src/: main.py
styles/: style.css  yorumi.css
tests/: test_main.py
